--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "scheduler-card",
-  "version": "1.0.0",
-  "description": "Scheduler card for Lovelace",
-  "main": "dist/scheduler-card.js",
+  "name": "standalone-schedule-card",
+  "version": "3.0.0",
+  "description": "Home Assistant Lovelace card for displaying schedules from various integrations.",
+  "keywords": [
+    "home-assistant",
+    "homeassistant",
+    "hass",
+    "automation",
+    "lovelace",
+    "custom-cards"
+  ],
+  "author": "MislavMandaric",
+  "license": "GNU GPL v3",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:MislavMandaric/home-assistant-standalone-schedule-card.git"
+  },
+  "homepage": "https://github.com/MislavMandaric/home-assistant-standalone-schedule-card",
+  "bugs": {
+    "url": "https://github.com/MislavMandaric/home-assistant-standalone-schedule-card/issues"
+  },
   "scripts": {
-    "build": "npm run lint && npm run rollup && npm run babel",
+    "build": "npm run rollup",
     "rollup": "rollup -c",
-    "babel": "babel dist/scheduler-card.js --out-file dist/scheduler-card.js",
     "lint": "eslint src/**/*.ts --fix",
     "start": "rollup -c --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nielsfaber/scheduler-card.git"
-  },
-  "author": "nielsfaber",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nielsfaber/scheduler-card/issues"
-  },
-  "homepage": "https://github.com/nielsfaber/scheduler-card#readme",
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@formatjs/intl-utils": "^3.8.4",
     "@mdi/js": "^6.4.95",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-json": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
     "@vue/web-component-wrapper": "^1.3.0",
     "custom-card-helpers": "^1.7.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
     "fecha": "^4.2.1",
     "home-assistant-js-websocket": "^5.7.0",
     "lit": "^2.0.0-rc.2",
-    "prettier": "^1.18.2",
-    "rollup": "^1.32.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-import-css": "^3.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "rollup-plugin-uglify": "^6.0.3",
-    "typescript": "^3.6.4",
     "vue": "^2.6.14",
     "vue2-daterange-picker": "^0.6.5"
   },
   "devDependencies": {
-    "rollup-plugin-commonjs": "^10.1.0"
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
+    "rollup": "^2.58.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-import-css": "^3.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.0",
+    "typescript": "^4.4.3"
   }
 }
