--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,15 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Setup NodeJS
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Build JS release
+      run: npm run build
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v2
       env:
