--- a/.releaserc
+++ b/.releaserc
@@ -2,7 +2,15 @@
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
+        "@semantic-release/changelog",
+        ["@semantic-release/npm", {
+            "npmPublish": false
+        }],
         "@semantic-release/git",
-        "@semantic-release/github"
+        ["@semantic-release/github", {
+            "assets": [
+                {"path": "dist/*.js"}
+            ]
+        }]
     ]
 }
