--- a/.devcontainer/ui-lovelace.yaml
+++ b/.devcontainer/ui-lovelace.yaml
@@ -1,5 +1,5 @@
 resources:
-  - url: http://127.0.0.1:5000/scheduler-card.js
+  - url: http://127.0.0.1:5000/standalone-schedule-card.js
     type: module
 views:
   - cards:
